# OpenSteamTool

./: .gitignore
.github/workflows/: gui-release.yml
docs/: GUI_COMPLETION_AUDIT.md  GUI_IMPLEMENTATION.md
gui/: FAQ.md  README.md  build_exe.py  pyproject.toml
gui/docs/screenshots/: README.md
gui/i18n/: en_US.ts  zh_CN.ts
gui/src/opensteamtool_gui/: __init__.py  __main__.py  app.py  main.py
gui/src/opensteamtool_gui/models/: database.py  game.py  settings.py
gui/src/opensteamtool_gui/resources/dlls/: README.md
gui/src/opensteamtool_gui/resources/i18n/: README.md  en_US.qm  zh_CN.qm
gui/src/opensteamtool_gui/services/: installer.py  log_reader.py  lua_generator.py  lua_parser.py  registry.py  steam_path.py  upstream_dll_release.py
gui/src/opensteamtool_gui/services/fetcher/: __init__.py  base.py  caigames.py  github_repos.py  pipeline.py  steam_api.py  steamcmd.py  sudama.py
gui/src/opensteamtool_gui/utils/: atomic_write.py  cache.py  cn_detect.py  hex_validate.py  http_client.py  paths.py
gui/src/opensteamtool_gui/views/: add_game_dialog.py  batch_import_dialog.py  installer_view.py  library_view.py  log_viewer.py  main_window.py  settings_view.py  theme.py
gui/src/opensteamtool_gui/views/widgets/: collapsible_group.py
gui/tests/: test_atomic_write.py  test_batch_import_dialog.py  test_build_exe.py  test_cache_utils.py  test_database.py  test_fetch_pipeline.py  test_fetcher_parsers.py  test_imports.py  test_installer_service.py  test_log_reader.py  test_lua_generator.py  test_lua_parser.py  test_registry_service.py  test_upstream_dll_release.py
(+2 files in other folders)
