[project]
name = "opensteamtool-gui"
version = "1.0.0"
description = "GUI frontend for OpenSteamTool DLL"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5",
    "httpx[http2]>=0.27",
    "qasync>=0.27",
    "qtawesome>=1.3",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-qt", "pytest-asyncio", "ruff", "pyinstaller"]

[project.scripts]
opensteamtool-gui = "opensteamtool_gui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opensteamtool_gui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
